fix bugs in mobile nav wrap

--- a/css/media.css
+++ b/css/media.css
@@ -141,4 +141,11 @@
         justify-content: center;
         align-items: center;
     }
+    .header-content{
+        margin-top:20px
+    }
+    .projects__items-img{
+        width: 280px;
+        height: 300px;
+    }
 }
